# transfer-bench

./: .gitignore  .gitmodules  LICENSE  MANIFEST.in  Readme.md  get_runs.py  pyproject.toml  requirements.txt  run.py  setup.py  test_mgaa.py  trbench  wandb_logger.py
attacks_zoo/: README.md
benchmark/: Readme.md  config.py  run_helpers.py  utils.py  wandb_helpers.py  wandb_logger.py  wandb_reader.py
benchmark_tools/: Readme.md  config.py  main_bnch_tool.py  run_helpers.py
examples/: example-attack-evaluation.ipynb  factor_analysis.ipynb  main.py  residual_transfer_evaluation.ipynb
tests/: __init__.py  cifar100_models.py  cifar10_models.py  load_all_models.py  test_attack.py  test_bases.py  test_defaults_weights.py  test_dswea.py  test_gaa.py  test_gfcs.py  test_hybrid.py  test_nes.py  test_robust_models_load.py  test_sasd.py  test_simbaods.py  test_subspace.py  test_zeroquery.py
transferbench/: __init__.py  __main__.py  attack_evaluation.py  evaluate_transferability.py  scenarios.py  transferability_evaluation.py  types.py
transferbench/attacks/: __init__.py  base_transfer_attack.py  naive_avg.py  utils.py
transferbench/attacks_zoo/: README.md  __init__.py  bases.py  dswea.py  gaa.py  naive_avg.py  oneshot_attacks.py  simba_ods.py  simbaods.py  transfer_attack_wrapper.py  utils.py
transferbench/attacks_zoo/query_based/: __init__.py  bases.py  dswea.py  gfcs.py  (+7 more)
transferbench/benchmark_tools/: Readme.md  config.py  main_bnch_tool.py  report_helpers.py  run_helpers.py  utils.py  wandb_helpers.py
transferbench/datasets/: __init__.py  cifar10_target.py  dataloader.py  datasets.py  imagenet_target.py
transferbench/evaluations/: __init__.py  attack.py  scenarios.py  transferability.py
transferbench/models/: __init__.py  ccat_models.py  cifar_models.py  imagenet_models.py  models.py  pubdef.py  pubdef_models.py  robust_models.py  utils.py
transferbench/utils/: cache.py  config.py  scenarios.py
transferbench/wrappers/: __init__.py  attack_wrapper.py  model_wrapper.py  utils.py
(+17 files in other folders)
