[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "transferbench"
version = "0.1.0"
description = "A Python package for benchmarking transfer-black-box attacks."
authors = [
    { name = "Fabio Brau", email = "fabio.brau@unica.it" },
    { name = "Antonio Cinà", email = "antonio.cina@unige.it" },
    { name = "Maura Pintor", email = "maura.pintor@unica.it" },
]
license = "MIT"
readme = "Readme.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch>=1.7.0",
    "torchvision>=0.8.0",
    "kagglehub >= 0.3.0",
    "tqdm >= 4.62.0",
    "appdirs >= 1.4.0",
    "wandb >= 0.10.0",
    "pandas >= 2.2.0",
    "tabulate>= 0.9.0",
    "omegaconf >= 2.3.0",
]

[project.optional-dependencies]
robust = [
    "robustbench >= 1.1",
    "autoattack @ git+https://github.com/fra31/auto-attack",
    "timm==1.0.9",
    "frozendict",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["transferbench*", "config"]

[project.scripts]
trbench = "transferbench.benchmark_tools.main_bnch_tool:main"
